<resources>
    <string name="app_name">YoungIndiaJobs</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Settings</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="country_name">Nigeria</string>
    <string name="title_activity_login_user_">LoginUser_Activity</string>
    <string name="username">Username</string>
    <string name="txt_psw">Password</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_employee__home">Employee_HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_company_detail">CompanyDetail</string>
    <string name="min_exp"> Min Exp</string>
    <string-array name="Min_number_arrays">
        <item>Select Min Experience</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="max_exp"> Max Exp</string>
    <string-array name="number_arrays">
        <item>Select Max Experience</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="location">Location</string>
    <string-array name="location_name">
        <item>Select Location</item>
        <item>Bangalore</item>
        <item>MySore</item>
        <item>Punjab</item>
        <item>Kerala</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Rajasthan</item>
        <item>Madhya Pradesh</item>
        <item>Chhattisgarh</item>
    </string-array>
    <string name="industry">Industry</string>
    <string-array name="industry_name">

        <item>Select Industry</item>

        <item>Automobiles</item>
        <item>Chemicals</item>
        <item>Construction and Capital Goods</item>
        <item>Consumption products</item>
        <item>Energy</item>
        <item>Healthcare</item>
        <item>Infrastructure</item>
        <item>Metals</item>
        <item>Retail and other services</item>
        <item>Technology, Media and Telecomunication</item>

        <item>Others</item>


    </string-array>
    <string name="function">Function</string>
    <string-array name="function_name">
        <item>Select Function</item>
        <item> Admin/Secretarial</item>
        <item>Fresher</item>
        <item>Administration Executive</item>
        <item>Computer Operator/ Data Entry </item>
        <item> Typist   </item>
        <item> Despatch Incharge  </item>
        <item>Other Admin/Clerical/Secretarial</item>
        <item> Receptionist/ Front Desk </item>
        <item>	Secretarial</item>
        <item>Executive Secretary/Personal Assistant  </item>
        <item>	Facilities Manager</item>
        <item> Administration Manager </item>
        <item>  VP/ GM - Administration</item>
        <item> Trainee</item>
        <item> Software Engineer/ Programmer</item>
        <item>  Systems Engineer</item>
        <item> Team Leader/ Technical Leader</item>
        <item>  System Analyst/ Tech Architect</item>
        <item> Business Analyst</item>
        <item>  Project Leader/ Project Manager</item>
        <item>Database Administrator (DBA)</item>
        <item>   Database Architect/ Designer</item>
        <item>
        Delivery Manager</item>
        <item>  Program Manager</item>
        <item>   Datawarehousing Consultants</item>
        <item>System Administrator</item>
        <item>   H/W Installation/ Maintenance Engg</item>
        <item>
        Network Administrator</item>
        <item>  Network Designer</item> <item>
        Security Analyst</item>
        <item>
        System Security - Engineer</item>
        <item>Technical Support Engineer</item>
        <item>  Software Test Engineer</item>
        <item> System Integrator</item>
        <item>Graphic Designer/ Animator</item>
        <item> ERP, CRM - Functional Consultant</item>
        <item>  ERP, CRM - Technical Consultant</item>
        <item>   ERP, CRM - Support Engineer</item>
        <item>   S/W Installation/ Maintenance Engg</item>
        <item> Product Manager</item>
        <item>   Configuration Mgr/ Release Manager</item>
        <item>  Trainer/ Faculty</item>
        <item>   Technical Writer</item>
        <item>  VP/ GM - Quality</item>
        <item> Web Master/ Web Site Manager</item>
        <item>   SEO Expert</item>
        <item>       Hardware Design Engineer</item>
        <item> Hardware Design Technical Leader</item>
        <item> Quality Assurance Executive</item>
        <item> Quality Assurance - Manager</item>
        <item>  Computer Operator/ Data Entry</item>
        <item> Instructional Designer</item>
        <item> EDP Analyst</item>
        <item> IT/ Networking (EDP) - Manager</item>
        <item> Information Systems (MIS) - Manager</item>
        <item>     MIS Executive</item>
        <item> VP/ Head - Technology (IT)</item>
        <item> Chief Technology Officer</item>
        <item>   Chief Information Officer </item>
        <item>     VP - Operations/ COO</item>
        <item>   SBU Head /Profit Centre Head</item>
        <item> CEO/ MD/ Country Manager</item>
        <item>  Director on Board</item>
        <item> External Consultant</item>
        <item>Other Software/Hardware/EDP</item>
        <item> Legal</item>
        <item>  Marketing and Communications</item>
        <item>   Purchase/ Logistics/ Supply Cha ...</item>
        <item>  Sales/ Business Development</item>
        <item> Advertising/Entertainment/Media</item>
        <item>  Banking, Insurance  and Financial ...</item>
        <item> Construction</item>
        <item>Education/ Teaching</item>
        <item>  Export/ Import</item>
        <item>  Health Care</item>
        <item> Travel/ Airlines</item>
        <item> Telecom/ ISP</item>
        <item>  Retail Chains</item>
        <item> Real Estate</item>
        <item> Analytics/Business Intelligence</item>
        <item>Pharmaceutical/ Biotechnology</item>
        <item> Oil and Gas</item>
        <item> Manufacturing/ Engineering/ R and D</item>
        <item> Hotels/ restaurants</item>
    </string-array>
    <string name="user_name">User name</string>
    <string name="user_qualification">MCA(Computer Application)</string>
    <string name="Skill">user Skill</string>
    <string name="user_skill">C,C++,JAVA,Android</string>
    <string name="user_specialization">User Specialization</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="designation">Designation</string>
    <string name="qualification">Qualification</string>
    <string-array name="salary">
        <item>Salary</item>
        <item>1Lac</item>
        <item>2Lac</item>
        <item>3Lac</item>
        <item>4Lac</item>
        <item>5Lac</item>
        <item>6Lac</item>
        <item>7Lac</item>
        <item>8Lac</item>
        <item>9Lac</item>
        <item>10Lac</item>
    </string-array>
    <string name="search">Search</string>
    <string name="hint_desgntion">eg.Skills,Android,Java</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_">Search_Activity</string>
    <string-array name="country_arrays">
        <item>Location</item>
        <item>Bangalore</item>
        <item>Delhi</item>
        <item>Chennai</item>
        <item>Hyderabad</item>
        <item>Mumbai</item>

    </string-array>
    <string-array name="qualification_arrays">
        <item>Qualification</item>
        <item>MCA</item>
        <item>BCA</item>
        <item>BTECH</item>
        <item>BCOM</item>
        <item>BSC</item>

    </string-array>
    <string name="current_company">Current Company</string>
    <string name="keyskill">Key Skills</string>
    <string name="company_role">University</string>
    <string name="languages">Languages</string>
    <string name="job_perfernce">Job Perfernce</string>
    <string name="other_detail">Other Detail</string>
    <string-array name="categoy_array">Catagory

        <item>Select Category</item>
        <item>Genral</item>
        <item>SC</item>
        <item>OBC</item>
        <item>ST</item>

        </string-array>
    <string name="location_perfer">Perfer Location</string>
    <string name="postion">Position</string>
    <string name="description">Description</string>
    <string name="apply">Apply</string>
    <string name="experecnce">Experience</string>
    <string name="name1">Name</string>
    <string name="email">Email</string>
    <string name="current_address">Current Address</string>
    <string name="permant_address">Permanent Address</string>
    <string name="phone">Phone</string>
    <string name="role">Role</string>
    <string name="graducation">Graducation</string>
    <string name="percentage">Percentage/CGPA</string>
    <string name="midle_name">Middle Name</string>
    <string name="tenth">Matriculation</string>
    <string name="others">Others</string>
    <string name="twelv">Secondary</string>
    <string name="lst_name">Last Name</string>
    <string name="job_owner_Detail">Job Owner Details</string>
    <string name="expected_slry">Expected Salary</string>
    <string name="job">Job</string>
    <string name="job_detail">Job Detail</string>
    <string name="key_skill">Key Skills</string>
    <string name="dob">Date of birth</string>
    <string name="total_experecnce">Total Experience</string>
    <string name="year">Year of passed</string>
    <string-array name="year_name">
        <item>Select Year</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>
    <string name="title_activity_search__result">Search_Result</string>
    <string name="title_activity_employer__home">Employer_HomeActivity</string>
    <string name="inbox">Inbox</string>
    <string name="categories">Categories</string>
    <string name="physically_challeged">Physically Challeged</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sponsored_field">Sponsored Field</string>
    <string name="sponsored_field_name">Sponsor Name</string>
    <string name="sponsored_field_detailed">Sponsore Detailes</string>
    <string name="starred">Post a Job</string>
    <string-array name="items">
        <item>Please select the value</item>
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>
    <string name="title_activity_employer_home1_">EmployerHome1_Activity</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>