<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_marginTop="20dp"
    android:background="@color/backgd_light_blue">
    <com.youngindia.jobportal.fonts.Roboto_Regular
        android:id="@+id/txt_designation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/designation"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/lbl_txtsize"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edt_height_normal"
        android:background="@color/color_transparent"
        android:layout_marginBottom="@dimen/mrgin_btwn_edtText"
        android:singleLine="true"
        android:hint="@string/hint_desgntion"
        android:id="@+id/autocompleteEditTextView"
        android:layout_below="@+id/txt_designation"/>
    <com.youngindia.jobportal.fonts.Roboto_Regular
        android:id="@+id/txt_qualifiction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qualification"
        android:textColor="@color/textColorPrimary"
        android:layout_below="@id/autocompleteEditTextView"
        android:textSize="@dimen/lbl_txtsize"/>
    <LinearLayout
        android:id="@+id/linearlayout_qualification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/spinner_shape"
        android:layout_below="@+id/txt_qualifiction"
        android:weightSum="1"
        android:layout_marginBottom="@dimen/mrgin_btwn_edtText">
        <Spinner
            android:id="@+id/qualification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mrgin_btwn_edtText"
            android:entries="@array/qualification_arrays"/>
    </LinearLayout>
    <com.youngindia.jobportal.fonts.Roboto_Regular
        android:id="@+id/txt_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="@color/textColorPrimary"
        android:layout_weight="1"
        android:layout_below="@id/linearlayout_qualification"
        android:textSize="@dimen/lbl_txtsize"/>
    <LinearLayout
        android:id="@+id/linearlayout_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/spinner_shape"
        android:layout_below="@+id/txt_location"
        android:weightSum="1"
        android:layout_marginBottom="@dimen/mrgin_btwn_edtText">
        <Spinner
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/country_arrays"
            android:layout_marginBottom="@dimen/mrgin_btwn_edtText"/>
    </LinearLayout>
    <com.youngindia.jobportal.fonts.Roboto_Regular
        android:id="@+id/txt_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salary"
        android:textColor="@color/textColorPrimary"
        android:layout_weight="1"
        android:layout_below="@id/linearlayout_location"
        android:textSize="@dimen/lbl_txtsize"/>
    <LinearLayout
        android:id="@+id/linearlayout_slary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/spinner_shape"
        android:layout_below="@+id/txt_salary"
        android:weightSum="1"
        android:layout_marginBottom="@dimen/mrgin_btwn_edtText">
        <Spinner
            android:id="@+id/salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/salary"/>
    </LinearLayout>
    <com.youngindia.jobportal.fonts.Roboto_Regular_Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:background="@drawable/btnshape"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>