<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgd_light_blue"
    tools:context="com.youngindia.jobportal.ui.fragmnet_emp_reg2">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_layout"
        android:layout_marginTop="20dp">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">
        <com.youngindia.jobportal.fonts.Roboto_Regular
            android:id="@+id/txt_others_Detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_detail"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"
            android:layout_below="@id/linearlayout_04"
            android:textSize="@dimen/lbl_txtsize"/>

        <com.youngindia.jobportal.fonts.Roboto_Regular
            android:id="@+id/txt_languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/languages"
            android:textColor="@color/textColorPrimary"
            android:layout_below="@id/txt_others_Detail"
            android:textSize="@dimen/lbl_txtsize"/>
        <EditText
            android:id="@+id/edt_languages"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height_normal"
            android:background="@color/color_transparent"
            android:layout_below="@+id/txt_languages"
            android:textSize="@dimen/lbl_txtsize"
            android:singleLine="true"
            android:layout_marginBottom="13dp"/>

        <com.youngindia.jobportal.fonts.Roboto_Regular
            android:id="@+id/txt_job_perfernce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_perfernce"
            android:textColor="@color/textColorPrimary"
            android:layout_below="@id/edt_languages"
            android:textSize="@dimen/lbl_txtsize"/>
        <EditText
            android:id="@+id/edt_job_perfernce"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height_normal"
            android:background="@color/color_transparent"
            android:layout_below="@+id/txt_job_perfernce"
            android:textSize="@dimen/lbl_txtsize"
            android:singleLine="true"
            android:layout_marginBottom="13dp"/>

        <com.youngindia.jobportal.fonts.Roboto_Regular
            android:textColor="@color/textColorPrimary"
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:layout_below="@id/edt_job_perfernce"
            android:textSize="@dimen/lbl_txtsize"/>
        <LinearLayout
            android:id="@+id/linearlayout_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/spinner_shape"
            android:layout_below="@+id/tv_category"
            android:weightSum="1"
            android:layout_marginBottom="13dp">
            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/categoy_array"
                android:contextClickable="true"
                android:textColor="@color/textColorPrimary"/>
        </LinearLayout>

        <com.youngindia.jobportal.fonts.Roboto_Regular
            android:textColor="@color/textColorPrimary"
            android:id="@+id/tv_physically_challeged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physically_challeged"
            android:layout_below="@id/linearlayout_category"
            android:textSize="@dimen/lbl_txtsize"/>
        <LinearLayout
            android:id="@+id/linearlayout_physically_challeged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_below="@+id/tv_physically_challeged"
            android:weightSum="1"
            android:layout_marginBottom="13dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/radiobtn_yes"
                android:layout_weight="0.5"
                android:layout_below="@+id/linearlayout_physically_challeged"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:id="@+id/radiobtn_no"
                android:layout_weight="0.5"
                android:layout_alignTop="@+id/linearlayout_physically_challeged"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </LinearLayout>

        <com.youngindia.jobportal.fonts.Roboto_Regular
            android:id="@+id/txt_sponsored_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sponsored_field"
            android:textColor="@color/textColorPrimary"
            android:gravity="center"
            android:layout_marginBottom="@dimen/mrgin_btwn_edtText"
            android:layout_below="@id/linearlayout_physically_challeged"
            android:textSize="@dimen/lbl_txtsize"/>
        <com.youngindia.jobportal.fonts.Roboto_Regular
            android:id="@+id/txt_sponsored_field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sponsored_field_name"
            android:textColor="@color/textColorPrimary"
            android:layout_below="@id/txt_sponsored_field"
            android:textSize="@dimen/lbl_txtsize"/>
        <EditText
            android:id="@+id/edt_sponsored_field_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height_normal"
            android:background="@color/color_transparent"
            android:layout_below="@+id/txt_sponsored_field_name"
            android:textSize="@dimen/lbl_txtsize"
            android:singleLine="true"
            android:layout_marginBottom="13dp"/>
        <com.youngindia.jobportal.fonts.Roboto_Regular
            android:id="@+id/txt_sponsored_field_detailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sponsored_field_detailed"
            android:textColor="@color/textColorPrimary"
            android:layout_below="@id/edt_sponsored_field_name"
            android:textSize="@dimen/lbl_txtsize"/>

        <EditText
            android:id="@+id/edt_sponsored_field_detailed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height_normal"
            android:background="@color/color_transparent"
            android:layout_below="@+id/txt_sponsored_field_detailed"
            android:textSize="@dimen/lbl_txtsize"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="13dp"/>

        <com.youngindia.jobportal.fonts.Roboto_Regular
            android:id="@+id/txt_imgae_upload_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Image Upload Link"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="@dimen/mrgin_btwn_edtText"
            android:layout_below="@id/edt_sponsored_field_detailed"
            android:textSize="@dimen/lbl_txtsize"/>


        <com.youngindia.jobportal.fonts.Roboto_Regular_Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edt_height_normal"
            android:id="@+id/btn_upload"
            android:text="Upload Resume"
            android:background="@drawable/btnshape"
            android:textColor="@color/btn_textColor"
            android:layout_marginBottom="@dimen/mrgin_btwn_edtText"
            android:layout_below="@+id/txt_imgae_upload_link"
            android:layout_centerHorizontal="true" />
        <com.youngindia.jobportal.fonts.Roboto_Regular_Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height_normal"
            android:id="@+id/btn_submit"
            android:text="Submit"
            android:layout_below="@id/btn_upload"
            android:textColor="@color/btn_textColor"
            android:background="@drawable/btnshape"
            android:textSize="@dimen/btn_txtsize" />
    </RelativeLayout>

    </ScrollView>

</FrameLayout>
