<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.youngindia.jobportal.ui.frgmnt_setting">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_chnagePic"
            android:background="@drawable/default_pic"
            android:layout_gravity="center_horizontal|top" />
        <com.youngindia.jobportal.fonts.Roboto_Regular
            android:id="@+id/tv_oldPassword"
            android:textColor="@color/textColorPrimary"
            android:layout_weight="1"
            android:layout_below="@id/imageView_chnagePic"
            android:textSize="@dimen/lbl_txtsize"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/fab_margin"/>
        <EditText
            android:id="@+id/ED_oldPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height_normal"
            android:layout_weight="2"
            android:background="@color/color_transparent"
            android:textSize="@dimen/lbl_txtsize"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/mrgin_btwn_edtText"
            android:layout_below="@+id/tv_oldPassword"/>
        <com.youngindia.jobportal.fonts.Roboto_Regular
            android:id="@+id/tv_newpassword"
            android:textColor="@color/textColorPrimary"
            android:layout_weight="1"
            android:layout_below="@id/ED_oldPassword"
            android:textSize="@dimen/lbl_txtsize"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/fab_margin"/>
        <EditText
            android:id="@+id/ED_newPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height_normal"
            android:background="@color/color_transparent"
            android:layout_weight="2"
            android:textSize="@dimen/lbl_txtsize"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/mrgin_btwn_edtText"
            android:layout_below="@+id/tv_newpassword"/>
        <com.youngindia.jobportal.fonts.Roboto_Regular
            android:id="@+id/tv_confirmPassword"
            android:textColor="@color/textColorPrimary"
            android:layout_weight="1"
            android:layout_below="@id/ED_newPassword"
            android:textSize="@dimen/lbl_txtsize"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/fab_margin"/>
        <EditText
            android:id="@+id/ED_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edt_height_normal"
            android:background="@color/color_transparent"
            android:layout_weight="2"
            android:textSize="@dimen/lbl_txtsize"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/mrgin_btwn_edtText"
            android:layout_below="@+id/tv_confirmPassword"/>
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="Submit"
        android:layout_alignParentRight="true"
        android:id="@+id/btn_submit"
        android:textSize="@dimen/btn_txtsize"
        android:background="@drawable/btnshape"
        android:textColor="@color/btn_textColor"
        android:layout_gravity="center_horizontal|bottom" />


</FrameLayout>
